vendor/cargo/auto_impl-1.1.0/tests/compile-fail/fn_generics.stderr
error: the trait 'Greeter' cannot be implemented for Fn-traits: generic arguments are not allowed
 --> tests/compile-fail/fn_generics.rs:7:14
  |
7 |     fn greet<T: Display>(&self, name: T);
  |              ^
